Atualizar projeto para Java 17 e implementar melhorias
- Atualizar Java de 1.6 para 17
- Atualizar plugins Maven para versões modernas
- Atualizar dependências (commons-cli 1.5.0, JUnit 4.13.2)
- Adicionar suporte SLF4J para logging
- Melhorar thread-safety em Log.java
- Substituir System.out.println e printStackTrace por logging adequado
- Melhorar tratamento de exceções
- Adicionar validação de entrada em métodos críticos
- Adicionar JavaDoc em classes principais
- Melhorar interface de linha de comando (adicionar opções curtas -h, -v, -t)
- Atualizar URLs do projeto (Google Code -> GitHub)
- Remover suporte Java Web Start (incompatível com Java 11+)
- Corrigir APIs deprecated (Class.newInstance, GnuParser)
- Corrigir type mismatch em CardExplorer.java
- Corrigir parsing de opções de linha de comando
- Adicionar .gitignore
- Atualizar CHANGELOG.txt para v0.6.1